# haskell_tests

./: another_tree.hs  commonwords.hs  data_constructors.hs  fibonacci.hs  haskelltests.cabal  palindromic.hs  pattern_matching.hs  semigroup.hs  stack.yaml  sum.hs  tree.hs  tuple.hs
exe/: MainChristmasTree.hs  Shapes.hs
src/: Calendar.hs  ChristmasTree.hs  DataConstructors.hs  EqExercises.hs  FpCourse1.hs  MadLib.hs  MySum.hs  OrdExercises.hs  Reader.hs  Shape.hs
