name: haskelltests
version: 0.0.1
license-file: LICENSE
author: fcracker79@gmail.com
build-type: Simple
cabal-version: >= 1.24


executable christmas_tree
  hs-source-dirs: exe
  main-is: MainChristmasTree.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5, haskelltests
  
library
  hs-source-dirs: src
  exposed-modules: Calendar,ChristmasTree,CommonWords,DataConstructors,EqExercises,Fibonacci,MySum,OrdExercises,Palindromic,PatternMatching,SemigroupExample,Tree,TupleFunctor
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
